Foodie login fixed

--- a/auth-server/src/main/resources/application.properties
+++ b/auth-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=9999
-server.servlet.context-path=/uaa
+server.servlet.context-path=/auth
 logging.level.org.springframework.security=DEBUG
 #security.basic.enabled:false
 
