--- a/foodie-backend/src/main/resources/application.yaml
+++ b/foodie-backend/src/main/resources/application.yaml
@@ -31,17 +31,17 @@ spring:
             - public_profile
           myService:
             client-name: my-service
-            client-id: barClientIdPassword
+            client-id:  foodie
             client-secret: secret
             redirect-uri-template: http://localhost:8080/oauth2/callback/myService
             authorization-grant-type: authorization_code
-            scope: bar,read,write
+            scope: profile_picture,phone_number,address
             
         provider:
           facebook:
             authorizationUri: https://www.facebook.com/v3.0/dialog/oauth
             tokenUri: https://graph.facebook.com/v3.0/oauth/access_token
-            userInfoUri: https://graph.facebook.com/v3.0/me?fields=id,location,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
+            userInfoUri: https://graph.facebook.com/v3.0/me?fields=id,first_name,middle_name,last_name,name,email,verified,is_verified,picture.width(250).height(250)
           myService:
             authorization-uri: http://localhost:9999/auth/oauth/authorize
             token-uri: http://localhost:9999/auth/oauth/token
